tprf/3.2.x/_sources/cpp2rst_generated/triqs_tprf.rst.txt
triqs_tprf
##########



Type aliases
------------

.. table::
   :widths: 40 60


   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g_tau_t    | gf<triqs::mesh::imtime, triqs::gfs::matrix_valued>                                        |  Container type of two-particle Green and Vertex functions in imaginary time        |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi2_iw_t  | gf<triqs::mesh::imfreq, tensor_valued<4>>                                                 |  Container type of :math:`\chi_3` in Matsubara frequencies                          |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi2_tau_t | gf<triqs::mesh::imtime, tensor_valued<4>>                                                 |  Container type of :math:`\chi_3` in imaginary time                                 |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi3_iw_t  | gf<prod<triqs::mesh::imfreq, triqs::mesh::imfreq>, tensor_valued<4>>                      |  Container type of :math:`\chi_3` in Matsubara frequencies                          |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi3_tau_t | gf<prod<triqs::mesh::imtime, triqs::mesh::imtime>, tensor_valued<4>>                      |  Container type of :math:`\chi_3` in imaginary time                                 |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi4_iw_t  | gf<prod<triqs::mesh::imfreq, triqs::mesh::imfreq, triqs::mesh::imfreq>, tensor_valued<4>> |  Container type of two-particle Green and Vertex functions in Matsubara frequencies |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | chi4_tau_t | gf<prod<triqs::mesh::imtime, triqs::mesh::imtime, triqs::mesh::imtime>, tensor_valued<4>> |  Container type of two-particle Green and Vertex functions in imaginary time        |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_n_t     | gf<triqs::mesh::imfreq, tensor_valued<4>>                                                 |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_n_vt    | g2_n_t::view_type                                                                         |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_n_cvt   | g2_n_t::const_view_type                                                                   |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_nn_t    | gf<prod<triqs::mesh::imfreq, triqs::mesh::imfreq>, tensor_valued<4>>                      |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_nn_vt   | g2_nn_t::view_type                                                                        |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
   | g2_nn_cvt  | g2_nn_t::const_view_type                                                                  |                                                                                     |
   +------------+-------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+


Functions
---------

.. table::
   :widths: 40 60


   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`inverse <triqs_tprf__inverse>`                                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`inverse_PH <triqs_tprf__inverse_PH>`                                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`inverse_PP <triqs_tprf__inverse_PP>`                                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`inverse_PH_bar <triqs_tprf__inverse_PH_bar>`                                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`product <triqs_tprf__product>`                                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`product_PH <triqs_tprf__product_PH>`                                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`product_PP <triqs_tprf__product_PP>`                                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`product_PH_bar <triqs_tprf__product_PH_bar>`                                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`identity <triqs_tprf__identity>`                                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`identity_PH <triqs_tprf__identity_PH>`                                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`identity_PP <triqs_tprf__identity_PP>`                                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`identity_PH_bar <triqs_tprf__identity_PH_bar>`                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_from_gg2_PH <triqs_tprf__chi0_from_gg2_PH>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_from_gg2_PP <triqs_tprf__chi0_from_gg2_PP>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_from_gg2_PH <triqs_tprf__chi_from_gg2_PH>`                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_from_gg2_PP <triqs_tprf__chi_from_gg2_PP>`                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_tau_from_g_tau_PH <triqs_tprf__chi0_tau_from_g_tau_PH>`                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g0_wk <triqs_tprf__lattice_dyson_g0_wk>`                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g_wk <triqs_tprf__lattice_dyson_g_wk>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g0_fk <triqs_tprf__lattice_dyson_g0_fk>`                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g_fk <triqs_tprf__lattice_dyson_g_fk>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g_w <triqs_tprf__lattice_dyson_g_w>`                                                                                               |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lattice_dyson_g_f <triqs_tprf__lattice_dyson_g_f>`                                                                                               |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_wk_to_wr <triqs_tprf__fourier_wk_to_wr>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_wr_to_wk <triqs_tprf__fourier_wr_to_wk>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_wr_to_tr <triqs_tprf__fourier_wr_to_tr>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_tr_to_wr <triqs_tprf__fourier_tr_to_wr>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_fk_to_fr <triqs_tprf__fourier_fk_to_fr>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_fr_to_fk <triqs_tprf__fourier_fr_to_fk>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_Tk_to_Tr <triqs_tprf__fourier_Tk_to_Tr>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fourier_Tr_to_Tk <triqs_tprf__fourier_Tr_to_Tk>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`lindhard_chi00 <triqs_tprf__lindhard_chi00>`                                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`solve_rpa_PH <triqs_tprf__solve_rpa_PH>`                                                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`split_into_dynamic_wk_and_constant_k <triqs_tprf__split_into_dynamic_wk_and_constant_k>`                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`add_dynamic_and_static <triqs_tprf__add_dynamic_and_static>`                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fermi <triqs_tprf__fermi>`                                                                                                                       |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`bose <triqs_tprf__bose>`                                                                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`rho_k_from_g_wk <triqs_tprf__rho_k_from_g_wk>`                                                                                                   |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`gw_sigma <triqs_tprf__gw_sigma>`                                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`hartree_sigma <triqs_tprf__hartree_sigma>`                                                                                                       |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`fock_sigma <triqs_tprf__fock_sigma>`                                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`gw_dynamic_sigma <triqs_tprf__gw_dynamic_sigma>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`g0w_dynamic_sigma <triqs_tprf__g0w_dynamic_sigma>`                                                                                               |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`g0w_sigma <triqs_tprf__g0w_sigma>`                                                                                                               |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`dynamical_screened_interaction_W <triqs_tprf__dynamical_screened_interaction_W>`                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`dynamical_screened_interaction_W_from_generalized_susceptibility <triqs_tprf__dynamical_screened_interaction_W_from_generalized_susceptibility>` |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`eliashberg_product <triqs_tprf__eliashberg_product>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`eliashberg_product_fft <triqs_tprf__eliashberg_product_fft>`                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`dynamic_and_constant_to_tr <triqs_tprf__dynamic_and_constant_to_tr>`                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`construct_phi_wk <triqs_tprf__construct_phi_wk>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_Tr_from_g_Tr_PH <triqs_tprf__chi0_Tr_from_g_Tr_PH>`                                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_tr_from_grt_PH <triqs_tprf__chi0_tr_from_grt_PH>`                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0_w0r_from_grt_PH <triqs_tprf__chi0_w0r_from_grt_PH>`                                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_w0r_from_chi_tr <triqs_tprf__chi_w0r_from_chi_tr>`                                                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_wr_from_chi_tr <triqs_tprf__chi_wr_from_chi_tr>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_tr_from_chi_wr <triqs_tprf__chi_tr_from_chi_wr>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_wk_from_chi_wr <triqs_tprf__chi_wk_from_chi_wr>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi_wr_from_chi_wk <triqs_tprf__chi_wr_from_chi_wk>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0r_from_gr_PH <triqs_tprf__chi0r_from_gr_PH>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0r_from_gr_PH_nompi <triqs_tprf__chi0r_from_gr_PH_nompi>`                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0q_from_g_wk_PH <triqs_tprf__chi0q_from_g_wk_PH>`                                                                                             |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0r_from_chi0q <triqs_tprf__chi0r_from_chi0q>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0q_from_chi0r <triqs_tprf__chi0q_from_chi0r>`                                                                                                 |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0q_sum_nu <triqs_tprf__chi0q_sum_nu>`                                                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0q_sum_nu_tail_corr_PH <triqs_tprf__chi0q_sum_nu_tail_corr_PH>`                                                                               |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chi0q_sum_nu_q <triqs_tprf__chi0q_sum_nu_q>`                                                                                                     |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chiq_from_chi0q_and_gamma_PH <triqs_tprf__chiq_from_chi0q_and_gamma_PH>`                                                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chiq_sum_nu_from_chi0q_and_gamma_PH <triqs_tprf__chiq_sum_nu_from_chi0q_and_gamma_PH>`                                                           |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+
   | :ref:`chiq_sum_nu_from_chi0q_and_gamma_and_L_wn_PH <triqs_tprf__chiq_sum_nu_from_chi0q_and_gamma_and_L_wn_PH>`                                         |  |
   +--------------------------------------------------------------------------------------------------------------------------------------------------------+--+

.. toctree::
    :hidden:

    triqs_tprf/inverse
    triqs_tprf/inverse_PH
    triqs_tprf/inverse_PP
    triqs_tprf/inverse_PH_bar
    triqs_tprf/product
    triqs_tprf/product_PH
    triqs_tprf/product_PP
    triqs_tprf/product_PH_bar
    triqs_tprf/identity
    triqs_tprf/identity_PH
    triqs_tprf/identity_PP
    triqs_tprf/identity_PH_bar
    triqs_tprf/chi0_from_gg2_PH
    triqs_tprf/chi0_from_gg2_PP
    triqs_tprf/chi_from_gg2_PH
    triqs_tprf/chi_from_gg2_PP
    triqs_tprf/chi0_tau_from_g_tau_PH
    triqs_tprf/lattice_dyson_g0_wk
    triqs_tprf/lattice_dyson_g_wk
    triqs_tprf/lattice_dyson_g0_fk
    triqs_tprf/lattice_dyson_g_fk
    triqs_tprf/lattice_dyson_g_w
    triqs_tprf/lattice_dyson_g_f
    triqs_tprf/fourier_wk_to_wr
    triqs_tprf/fourier_wr_to_wk
    triqs_tprf/fourier_wr_to_tr
    triqs_tprf/fourier_tr_to_wr
    triqs_tprf/fourier_fk_to_fr
    triqs_tprf/fourier_fr_to_fk
    triqs_tprf/fourier_Tk_to_Tr
    triqs_tprf/fourier_Tr_to_Tk
    triqs_tprf/lindhard_chi00
    triqs_tprf/solve_rpa_PH
    triqs_tprf/split_into_dynamic_wk_and_constant_k
    triqs_tprf/add_dynamic_and_static
    triqs_tprf/fermi
    triqs_tprf/bose
    triqs_tprf/rho_k_from_g_wk
    triqs_tprf/gw_sigma
    triqs_tprf/hartree_sigma
    triqs_tprf/fock_sigma
    triqs_tprf/gw_dynamic_sigma
    triqs_tprf/g0w_dynamic_sigma
    triqs_tprf/g0w_sigma
    triqs_tprf/dynamical_screened_interaction_W
    triqs_tprf/dynamical_screened_interaction_W_from_generalized_susceptibility
    triqs_tprf/eliashberg_product
    triqs_tprf/eliashberg_product_fft
    triqs_tprf/dynamic_and_constant_to_tr
    triqs_tprf/construct_phi_wk
    triqs_tprf/chi0_Tr_from_g_Tr_PH
    triqs_tprf/chi0_tr_from_grt_PH
    triqs_tprf/chi0_w0r_from_grt_PH
    triqs_tprf/chi_w0r_from_chi_tr
    triqs_tprf/chi_wr_from_chi_tr
    triqs_tprf/chi_tr_from_chi_wr
    triqs_tprf/chi_wk_from_chi_wr
    triqs_tprf/chi_wr_from_chi_wk
    triqs_tprf/chi0r_from_gr_PH
    triqs_tprf/chi0r_from_gr_PH_nompi
    triqs_tprf/chi0q_from_g_wk_PH
    triqs_tprf/chi0r_from_chi0q
    triqs_tprf/chi0q_from_chi0r
    triqs_tprf/chi0q_sum_nu
    triqs_tprf/chi0q_sum_nu_tail_corr_PH
    triqs_tprf/chi0q_sum_nu_q
    triqs_tprf/chiq_from_chi0q_and_gamma_PH
    triqs_tprf/chiq_sum_nu_from_chi0q_and_gamma_PH
    triqs_tprf/chiq_sum_nu_from_chi0q_and_gamma_and_L_wn_PH